fix link spacing

--- a/css/style.css
+++ b/css/style.css
@@ -142,7 +142,7 @@ a:active {
 }
 
 .tables {
-  width: 30vw;
+  width: 35rem;
   margin:auto;
   white-space: nowrap;
 }
@@ -163,8 +163,7 @@ a:active {
   font-weight: bold;
   letter-spacing: 2px;
   list-style-type: none;
-  margin: 10px;
-  padding: 0;
+  margin: 5%;
   text-align: center;
 }
 
